<resources>
    <string name="app_name">智慧校园</string>
    <string name="common_no_net">网络不给力，请您稍后重试~</string>
    <string name="common_no_data">无相关数据</string>
    <string name="chat_send">发送</string>
    <string name="chat_say">按住&#160;&#160;说话</string>
    <string name="chat_class_info">班级资料</string>
    <string name="chat_class_name">班级名称</string>
    <string name="chat_class_slogan">班级口号</string>
    <string name="chat_class_willing">教师寄语</string>
    <string name="chat_class_persons">班级成员</string>
    <string name="chat_class_history_homework">历史作业浏览</string>
    <string name="chat_class_record">聊天记录</string>
    <string name="chat_class_delete_record">清空聊天记录</string>
    <string name="chat_class_shield">屏蔽群消息</string>
    <string name="chat_class_exit">退出该群</string>
    <string name="chat_class_exit_success">退出成功！</string>
    <string name="chat_content_null_error">聊天内容为空，请输入内容！</string>
    <string name="chat_no_jurisdiction_operat">您没有权限进行此操作！</string>
    <string name="chat_self">您选择的是自己，不能和自己聊天，请选择您要聊天的对象！</string>
    <string name="chat_dialog_download">下载</string>
    <string name="chat_dialog_copy">复制</string>
    <string name="chat_dialog_share">分享</string>
    <string name="chat_dialog_delete">删除</string>
    <string name="chat_dialog_delete_no_jurisdiction">您没有权限删除此信息！</string>
    <string name="chat_sina_sdk_error">新浪客户端不支持该分享</string>
    <string name="chat_no_sina_app">未安装新浪微博客户端</string>
    <string name="chat_no_weixin_app">未安装微信客户端</string>
    <string name="chat_share_success">分享成功</string>
    <string name="chat_share_cancel">分享取消</string>
    <string name="chat_share_failed">分享失败</string>
    <string name="chat_upload_work">上传作业</string>
    <string name="chat_upload_work_null_error">上传作业内容不能为空，请输入内容！</string>
    <string name="chat_upload_work_ok">确认上传</string>
    <string name="common_not_data">没有数据</string>
    <string name="common_zero">0</string>
    <string name="common_colon">:</string>
    <string name="common_albums">相&#160;&#160;册</string>
    <string name="common_photograph">拍&#160;&#160;照</string>
    <string name="common_choise_picture">图片选择</string>
    <string name="common_cancel">取&#160;&#160;消</string>
    <string name="home_main">首页</string>
    <string name="home_rob">微抢</string>
    <string name="home_myinfo">我的</string>
    <string name="home_location">导航</string>
    <string name="main_news">热点新闻</string>
    <string name="main_myschool">我的学校</string>
    <string name="main_myclass">班级沟通</string>
    <string name="main_love">点滴爱心</string>
    <string name="main_train">培训学校</string>
    <string name="main_heart">心灵驿站</string>
    <string name="main_parents_must_read">家长必读</string>
    <string name="main_study">好书推荐</string>
    <string name="main_day">每日一句</string>
    <string name="main_search_hint">城市中文名称或拼音首字母</string>
    <string name="main_search">搜索</string>
    <string name="main_location">定位城市：</string>
    <string name="main_locationing">正在定位&#8230;</string>
    <string name="main_choise_city">选择城市</string>
    <string name="rob_not_time">时间未到，请等待&#8230;</string>
    <string name="rob_success">抢单成功</string>
    <string name="rob_takeout">抢单已提交！</string>
    <string name="rob_panic_buying">抢购</string>
    <string name="rob_robing">抢</string>
    <string name="rob_commit">提交</string>
    <string name="rob_prompt">注：产品将于7个工作日内为你发出</string>
    <string name="rob_address_confirm">确认</string>
    <string name="rob_address_edit">修改</string>
    <string name="rob_address_cancel">取消</string>
    <string name="rob_address_save">保存</string>
    <string name="rob_address_null_error">地址不能为空，请输入地址！</string>
    <string name="myinfo_login">登&#160;&#160;录</string>
    <string name="myinfo_login_username">用户名</string>
    <string name="myinfo_login_username_null_error">用户名不能为空，请输入用户名！</string>
    <string name="myinfo_login_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="myinfo_login_password_null_error">密码不能为空，请输入密码！</string>
    <string name="myinfo_login_forget_password">忘记密码？</string>
    <string name="myinfo_login_register">注册</string>
    <string name="myinfo_login_register_xuzhi_next">下一步</string>
    <string name="myinfo_my_package">我的礼包</string>
    <string name="myinfo_register">注册账号</string>
    <string name="myinfo_register_xuzhi">注册须知</string>
    <string name="myinfo_register_xuzhi_fuwujieshou">一、服务条款的接受</string>
    <string name="myinfo_register_xuzhi_txt1">&#160;&#160;&#160;当您通过首页进入智慧校园，即表示您同意自己已经与智慧校园订立本协议，且您将受本协议的条款约束。</string>
    <string name="myinfo_register_xuzhi_fuwu_update">二、服务条款的修改和变更</string>
    <string name="myinfo_register_xuzhi_txt2">
        &#160;&#160;&#160;智慧校园有权随时修改和变更服务条款。如"条款"有任何变更，智慧校园将在页面上提示修改和变更 的内容，通知予您。如您不同意相关修改和变更，必须停止使用"服务"。经修改和变更的“条款”一经在智慧校园上公布后，立即自动生效。您登录或继续使用"服务"将表示您接受经修改和变更的“条款”。
        </string>
    <string name="myinfo_register_xuzhi_name_pwd">三、会员用户名、密码和保密</string>
    <string name="myinfo_register_xuzhi_txt3">
        &#160;&#160;&#160;会员在注册过程中，您将选择会员注册用户名和密码。您须自行负责对您的会员注册用户名和密码的保密，且须对您在会员注册用户名和密码下发生的所有活动承担责任。
您同意：
1、如发现任何人未经授权使用您的会员注册用户名或密码，或发生违反保密规定的任何其他情况，您会立即通知智慧校园；
2、用户在每次使用智慧校园服务结束时，应结束帐号使用，否则因此所造成的任何损失或损害，智慧校园不承担任何责任。
    </string>
    <string name="myinfo_register_xuzhi_userinfo">四、用户信息</string>
    <string name="myinfo_register_xuzhi_txt4">
        &#160;&#160;&#160;智慧校园不对用户所发布信息的删除或储存失败负责。智慧校园有权判断用户的行为是否符合智慧校园服务条款规定的权利，如果用户违背了服务条款的规定，智慧校园有权中断向其提供服务。
    </string>
	<string name="myinfo_register_xuzhi_falv">五、法律的适用和管辖</string>
    <string name="myinfo_register_xuzhi_txt5">
        &#160;&#160;&#160;本服务条款的生效、履行、解释及争议的解决均适用中华人民共和国法律。本服务条款因与中华人民共和 国现行法律相抵触而导致部分无效，不影响其他部分的效力。
    </string>
    <string name="myinfo_register_phone">手机号：</string>
    <string name="myinfo_register_pwd">密&#160;&#160;&#160;&#160;码：</string>
    <string name="myinfo_register_phone_null_error">手机号不能为空，请输入手机号！</string>
    <string name="myinfo_register_phone_error">手机号输入有误，请重新输入！</string>
    <string name="myinfo_register_password">确认密码：</string>
    <string name="myinfo_register_password_null_error">确认密码不能为空，请输入确认密码！</string>
    <string name="myinfo_register_password_error">两次密码输入不一致，请重新输入！</string>
    <string name="myinfo_register_code">激活码：</string>
    <string name="myinfo_register_code_null_error">激活码不能为空，请输入激活码!</string>
    <string name="myinfo_register_code_error">激活码输入不正确，请重新输入!</string>
    <string name="myinfo_register_code_resend">重新发送</string>
    <string name="myinfo_register_code_time">已发送%1$d秒</string>
    <string name="myinfo_register_send_code">发送激活码</string>
    <string name="myinfo_register_students">学生</string>
    <string name="myinfo_register_teacher">教师</string>
    <string name="myinfo_register_parent">家长</string>
    <string name="myinfo_register_name_hint">姓名</string>
    <string name="myinfo_register_name_null_error">姓名不能为空，请输入姓名!</string>
    <string name="myinfo_register_agree">同意</string>
    <string name="myinfo_register_term">《智慧校园 用户协议》</string>
    <string name="myinfo_register_term_titel">智慧校园 用户协议</string>
       <string name="myinfo_register_agree_error">请选择同意用户注册协议！</string>
    <string name="myinfo_forget_password">忘记密码</string>
    <string name="myinfo_forget_password_ok">确&#160;&#160;定</string>
    <string-array name="myinfo_account_manager_sexs">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="myinfo_account_manager">便捷管理账户</string>
    <string name="myinfo_set_voice">声音</string>
    <string name="myinfo_set_zhendong">震动</string>
    <string name="myinfo_set_miandarao">接收新消息通知</string>
    <string name="myinfo_account_manager_update_success">更新账号信息成功！</string>
    <string name="myinfo_account_manager_finish">完成</string>
    <string name="myinfo_account_manager_update_header_image">更换头像</string>
    <string name="myinfo_account_manager_name">会员名称</string>
    <string name="myinfo_account_manager_sex">性别&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="myinfo_account_manager_age">年龄&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="myinfo_account_manager_job">职务&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="myinfo_account_manager_instruction">个人说明</string>
    <string name="myinfo_account_manager_love">个人爱好</string>
    <string name="myinfo_account_manager_class">所在班级</string>
    <string name="myinfo_account_manager_address">住址&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="myinfo_account_manager_update_password">更改密码</string>
    <string name="myinfo_update_password_old">旧密码：</string>
    <string name="myinfo_update_password_old_null_error">旧密码不能为空，请输入旧密码！</string>
    <string name="myinfo_update_password_new">新密码：</string>
    <string name="myinfo_update_password_new_null_error">新密码不能为空，请输入新密码！</string>
    <string name="myinfo_myattention">我的关注</string>
    <string name="myinfo_system_upgrade">系统升级</string>
    <string name="myinfo_about_us">关于我们</string>
    <string name="myinfo_share">软件分享</string>
    <string name="myinfo_feedback">及时提出建议</string>
    <string name="myinfo_appshare">软件分享</string>
    <string name="details">详情界面</string>
    <string name="myinfo_mylibao">我的礼包</string>
    <string name="myinfo_set">设置</string>
    <string name="myinfo_feedback_submit">提交</string>
    <string name="myinfo_feedback_phone">联系方式：</string>
    <string name="myinfo_instructions">功能介绍</string>
    <string name="myinfo_exit_login">退出登录</string>
    <string name="myinfo_update_password_success">更改密码成功！</string>
    <string name="myinfo_feedback_content_null_error">反馈内容不能为空，请输入反馈内容！</string>
    <string name="myinfo_feedback_success">反馈成功，我们将尽快处理！</string>
    <string name="study_author">作者：%1$s</string>
    <string name="study_publishers">出版社：</string>
    <string name="study_time">出版日期：</string>
    <string name="study_type">类型：%1$s</string>
    <string name="study_add_book">推荐添加</string>
    <string name="study_add_book_name">书名：</string>
    <string name="study_add_book_author">作者：</string>
    <string name="study_add_book_type">类型：</string>
    <string name="study_add_book_stage">阶段：</string>
    <string name="study_add_book_gread">年级：</string>
    <string name="study_add_book_info">简介：</string>
	<string name="study_add_book_name_null_error">书名不能为空，请输入书名！</string>
	<string name="study_add_book_author_null_error">作者不能为空，请输入作者！</string>
	<string name="study_add_book_publishers_null_error">出版社不能为空，请输入出版社！</string>
	<string name="study_add_book_info_null_error">简介不能为空，请输入简介！</string>
	<string name="study_add_book_image_null_error">图片不能为空，请点击图片添加图片！</string>
    <string name="study_add_book_add">确认添加</string>
    <string name="study_add_book_success">添加图书成功！</string>
    <string-array name="study_add_book_types">
        <item>教辅</item>
        <item>课外</item>
    </string-array>
    <string-array name="study_add_book_stages">
        <item>幼儿园</item>
        <item>小学</item>
        <item>初中</item>
        <item>高中</item>
    </string-array>
    <string-array name="study_add_book_gread_srimarys">
        <item>一年级</item>
        <item>二年级</item>
        <item>三年级</item>
        <item>四年级</item>
        <item>五年级</item>
        <item>六年级</item>
    </string-array>
    <string-array name="study_add_book_gread_hunior_middles">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
    </string-array>
    <string-array name="study_add_book_gread_senior_middles">
        <item>高一</item>
        <item>高二</item>
        <item>高三</item>
    </string-array>
    <string name="study_supplementary">教辅</string>
    <string name="study_extracurricular">课外</string>
    <string name="study_nursery">幼儿园</string>
    <string name="study_primary">小学</string>
    <string name="study_junior_middle">初中</string>
    <string name="study_senior_middle">高中</string>
    <string name="love_donate">捐助</string>
    <string name="love_donate_success">捐助成功！</string>
    <string name="love_name">姓名：%1$s</string>
    <string name="love_sex">性别：%1$s</string>
    <string name="love_age">年龄：%1$s</string>
</resources>