<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_title_bg"
        android:padding="@dimen/common_padding_10" >

        <TextView
            style="@style/commonText"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/home_myinfo"
            android:textColor="@color/common_bg"
            android:textSize="@dimen/common_text_size_22" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="vertical"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="130dp"
                android:layout_marginTop="@dimen/common_margin_8"
                android:background="@color/register_transparent"
                android:gravity="center" >

                <com.education.zhxy.common.view.CircleImageView
                    android:id="@+id/myinfoHeaderCircleImageView"
                    android:layout_width="@dimen/common_width_90"
                    android:layout_height="@dimen/common_height_90"
                    android:layout_centerInParent="true"
                    android:background="@drawable/common_header_image"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/myinfo_image_outside"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin_8"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/myinfoAccountManagerTextView"
                    style="@style/commonText"
                    android:layout_width="fill_parent"
                    android:padding="@dimen/common_padding_8"
                    android:text="@string/myinfo_account_manager"
                    android:background="@drawable/personal_center_layout_selector" />

                <View style="@style/commonLineView" />

                <TextView
                    android:id="@+id/myinfoMyAttentionTextView"
                    style="@style/commonText"
                    android:layout_width="fill_parent"
                    android:padding="@dimen/common_padding_8"
                    android:text="@string/myinfo_myattention"
                    android:background="@drawable/personal_center_layout_selector" />

                <View style="@style/commonLineView" />
                
                <TextView
                    android:id="@+id/myinfoMyPackageTextView"
                    style="@style/commonText"
                    android:layout_width="fill_parent"
                    android:padding="@dimen/common_padding_8"
                    android:text="@string/myinfo_my_package"
                    android:background="@drawable/personal_center_layout_selector" />

                <View style="@style/commonLineView" />

                <TextView
                    android:id="@+id/myinfoAboutUsTextView"
                    style="@style/commonText"
                    android:layout_width="fill_parent"
                    android:padding="@dimen/common_padding_8"
                    android:text="@string/myinfo_about_us"
                    android:background="@drawable/personal_center_layout_selector" />

                <View style="@style/commonLineView" />

                <TextView
                    android:id="@+id/myinfoiInstructionsTextView"
                    style="@style/commonText"
                    android:layout_width="fill_parent"
                    android:padding="@dimen/common_padding_8"
                    android:text="@string/myinfo_instructions"
                    android:background="@drawable/personal_center_layout_selector" />

                <View style="@style/commonLineView" />

                <TextView
                    android:id="@+id/myinfoSystemUpgradeTextView"
                    style="@style/commonText"
                    android:layout_width="fill_parent"
                    android:padding="@dimen/common_padding_8"
                    android:text="@string/myinfo_system_upgrade"
                    android:background="@drawable/personal_center_layout_selector" />

                <View style="@style/commonLineView" />
                
                <TextView
                    android:id="@+id/myinfoFeedbackTextView"
                    style="@style/commonText"
                    android:layout_width="fill_parent"
                    android:padding="@dimen/common_padding_8"
                    android:text="@string/myinfo_feedback" 
                    android:background="@drawable/personal_center_layout_selector"/>

                <View style="@style/commonLineView" />
				
                <TextView
                    android:id="@+id/myinfoShareTextView"
                    style="@style/commonText"
                    android:layout_width="fill_parent"
                    android:padding="@dimen/common_padding_8"
                    android:text="@string/myinfo_share" 
                    android:background="@drawable/personal_center_layout_selector"/>
                
                <View style="@style/commonLineView" />
                
                
                <TextView
                    android:id="@+id/myinfoSetTextView"
                    style="@style/commonText"
                    android:layout_width="fill_parent"
                    android:padding="@dimen/common_padding_8"
                    android:text="@string/myinfo_set" 
                    android:background="@drawable/personal_center_layout_selector"/>
                <View style="@style/commonLineView" />
            </LinearLayout>

            <Button
                android:id="@+id/myinfoExitLoginButton"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/common_height_45"
                android:layout_marginLeft="@dimen/common_margin_8"
                android:layout_marginRight="@dimen/common_margin_8"
                android:layout_marginTop="@dimen/common_margin_25"
                android:layout_marginBottom="@dimen/common_margin_70"
                android:background="@drawable/myinfo_exit_login_button_selector"
                android:text="@string/myinfo_exit_login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/common_text_size_20" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>