<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/heart_item_layout_bg"
    android:padding="@dimen/common_padding_15"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        style="@style/commonText"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_height_45"
        android:gravity="center"
        android:textColor="@color/common_text"
        android:text="@string/common_choise_picture"
        android:textSize="@dimen/common_text_size_22" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/common_margin_5"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_15"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/commonPhotographTextView"
            style="@style/commonText"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_height_45"
            android:layout_weight="1"
            android:background="@drawable/common_rectangle_bg"
            android:gravity="center"
            android:text="@string/common_photograph" />

        <TextView
            android:id="@+id/commonAlbumsTextView"
            style="@style/commonText"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_height_45"
            android:layout_marginLeft="@dimen/common_margin_15"
            android:layout_weight="1"
            android:background="@drawable/common_rectangle_bg"
            android:gravity="center"
            android:text="@string/common_albums" />
    </LinearLayout>

    <Button
        android:id="@+id/commonCancelButton"
        style="@style/commonButton"
        android:layout_width="fill_parent"
        android:layout_margin="@dimen/common_margin_8"
        android:text="@string/common_cancel" />

</LinearLayout>