<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_title_bg"
        android:padding="@dimen/common_padding_10" >

        <TextView
            android:id="@+id/studyBackTextView"
            style="@style/commonText"
            android:drawableLeft="@drawable/common_title_back_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/main_study"
            android:textColor="@color/common_bg"
            android:textSize="@dimen/common_text_size_22" />

        <ImageView
            android:id="@+id/studyAddImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/study_title_add_selector"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_height_40"
        android:background="@drawable/study_layout_bg"
        android:layout_margin="@dimen/common_margin_8"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/studySupplementaryTextView"
            style="@style/commonText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="fill_parent"
            android:background="@drawable/study_one_selector"
            android:text="@string/study_supplementary"/>

        <TextView
            android:id="@+id/studyExtracurricularTextView"
            style="@style/commonText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="fill_parent"
            android:background="@drawable/study_one_selector"
            android:text="@string/study_extracurricular"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/common_height_35"
        android:layout_marginLeft="@dimen/common_margin_8"
        android:layout_marginRight="@dimen/common_margin_8"
        android:background="@drawable/study_layout_bg"
        android:orientation="horizontal"  >

        <TextView
            android:id="@+id/studyNurseryTextView"
            style="@style/commonText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="fill_parent"
            android:textSize="@dimen/common_text_size_16"
            android:background="@drawable/study_two_selector"
            android:text="@string/study_nursery" />
        <View 
            android:id="@+id/studyOneView"
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/common_bg"/>

        <TextView
            android:id="@+id/studyPrimaryTextView"
            style="@style/commonText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="fill_parent"
            android:textSize="@dimen/common_text_size_16"
            android:background="@drawable/study_two_selector"
            android:text="@string/study_primary" />
        <View 
            android:id="@+id/studyTwoView"
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/common_bg"/>

        <TextView
            android:id="@+id/studyHuniorMiddleTextView"
            style="@style/commonText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/study_two_selector"
            android:gravity="center"
            android:text="@string/study_junior_middle"
            android:textSize="@dimen/common_text_size_16" />

        <View 
            android:id="@+id/studyThreeView"
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/common_bg"/>

        <TextView
            android:id="@+id/studySeniorMiddleTextView"
            style="@style/commonText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="fill_parent"
            android:textSize="@dimen/common_text_size_16"
            android:background="@drawable/study_two_selector"
            android:text="@string/study_senior_middle" />
    </LinearLayout>

    <ListView
        android:id="@+id/studyListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/common_margin_8"
        android:divider="@color/gray"
        android:dividerHeight="1dp"
        android:listSelector="@android:color/transparent"
        android:background="@drawable/study_layout_bg"
        android:scrollbars="none" />

</LinearLayout>